# WoWDBDefs

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  UPDATING.md  definitions.7z  initial_dump_from_binary.py  manifest.json
.devcontainer/: Dockerfile  devcontainer.json
analytics/: README.md
code/: wowdbdefs.sublime-syntax
definitions-3.0.8.9328/: AreaTriggerRec.dbd  CreatureDisplayInfoRec.dbd  CreatureFamilyRec.dbd  CreatureModelDataRec.dbd  CreatureSoundDataRec.dbd  CreatureSpellDataRec.dbd  FactionRec.dbd  FactionTemplateRec.dbd  ItemDisplayInfoRec.dbd  ItemRandomPropertiesRec.dbd  ItemRandomSuffixRec.dbd  ItemSetRec.dbd  ItemVisualEffectsRec.dbd  ItemVisualsRec.dbd  LockRec.dbd  ObjectEffectModifierRec.dbd  ObjectEffectPackageElemRec.dbd  ObjectEffectPackageRec.dbd  ObjectEffectRec.dbd  QuestInfoRec.dbd  QuestSortRec.dbd  SkillLineAbilityRec.dbd  SkillLineCategoryRec.dbd  SkillLineRec.dbd  SkillRaceClassInfoRec.dbd  SkillTiersRec.dbd  SoundEmittersRec.dbd  SoundEntriesAdvancedRec.dbd  SoundEntriesRec.dbd  SpellChainEffectsRec.dbd  SpellItemEnchantmentConditionRec.dbd  SpellItemEnchantmentRec.dbd  SpellMissileMotionRec.dbd  SpellMissileRec.dbd  SpellRec.dbd  SpellVisualEffectNameRec.dbd  SpellVisualKitRec.dbd  SpellVisualRec.dbd  TaxiNodesRec.dbd  TaxiPathNodeRec.dbd  (+5 more)
definitions-8.0.1.26175/: Achievement.dbd  Achievement_Category.dbd  AdventureMapPOI.dbd  AlliedRace.dbd  AlliedRaceRacialAbility.dbd  AnimKit.dbd  AnimKitBoneSet.dbd  AnimKitBoneSetAlias.dbd  AnimKitSegment.dbd  (+537 more)
exedumper/initial_dump_from_binary-3.0.1.8303/: CMakeLists.txt  dump.cpp
(+6195 files in other folders)
